--- a/src/caffe/test/CMakeLists.txt
+++ b/src/caffe/test/CMakeLists.txt
@@ -25,6 +25,8 @@ else()
   list(APPEND test_args --gtest_filter="-*GPU*")
 endif()
 
+# single test 
+list(APPEND test_args --gtest_filter="*PyramidLstm*")
 # ---[ Adding test target
 add_executable(${the_target} EXCLUDE_FROM_ALL ${test_srcs})
 target_link_libraries(${the_target} gtest ${Caffe_LINK})
