--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ include_directories(BEFORE src) # This is needed for gtest.
 add_subdirectory(src/gtest)
 add_subdirectory(src/caffe)
 add_subdirectory(tools)
+add_subdirectory(mytools)
 add_subdirectory(examples)
 add_subdirectory(python)
 add_subdirectory(matlab)
